syntax = "proto3";

option csharp_namespace = "StableDraw.MinIOService";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
  rpc GetObject (ImageIdRequest) returns (ImageReply);
  rpc PutObject (ImageRequest) returns (ImageIdReply);
  rpc DelObject (ImageIdRequest) returns (StatusReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

message ImageIdRequest {
  string id = 1;
  BucketsEnum bucket = 4;
}

message ImageRequest {
  bytes img_binary_data = 1;
  BucketsEnum bucket = 4;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message ImageReply {
  bytes img_binary_data = 1;
}

message ImageIdReply{
  string image_id = 1;
}

message StatusReply {
  int32 code = 1;
}

enum BucketsEnum
{
  ImagesStorage = 0;
}